# dog_finder

./: .config  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  dogfinder-docker-compose.dev.yml  dogfinder-docker-compose.yml  find_closest_dog.py  pyproject.toml  requirements.txt  utils.py  vgg_processing.py
app/: MyLogger.py  __init__.py  databse.py  main.py
app/DAL/: __init__.py  database.py  models.py  repositories.py
app/DTO/: dog_dto.py
app/exceptions/: auth_exceptions.py
app/helpers/: automapping_helper.py  helper.py  image_helper.py  model_helper.py  weaviate_helper.py
app/init/: exception_handler.py
app/model_optimization/: features_extractor.py  fine-tune-clip.ipynb  remove_background.py
app/models/: __init__.py  dog_document.py  predicates.py
app/routers/: dogfinder.py
app/services/: auth.py  dog_service.py  ivectordb_client.py  vectordb_indexer.py  weaviate_vectordb_client.py
app/viewmodels/: api_response.py  data_types.py  dog_viewmodel.py
automapper/: mapper.py
docker-services/: dogfinder-docker-compose.yml  weaviate-docker-compose.yml
env_vars/: .env.development
