[tool.poetry]
name = "dog-finder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
cachetools = "^5.3.1"
python-multipart = "^0.0.6"
weaviate-client = "^3.24.2"
Pillow = "^10.0.1"
sentence-transformers = "^2.2.2"
pydantic = "^2.4.2"
pytorch = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
